Fix home page buttons on mobile screens.

--- a/MoneySmart.Web/wwwroot/css/site.css
+++ b/MoneySmart.Web/wwwroot/css/site.css
@@ -51,7 +51,6 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.home-icon {
-    max-width: 330px;
-    margin-bottom: 1rem;
+.home-button {
+    width: 7rem;
 }
